--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "manim>=0.19.0",
     "matplotlib>=3.10.0",
+    "scikit-learn>=1.6.1",
 ]
