--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "manim>=0.19.0",
     "matplotlib>=3.10.0",
     "scikit-learn>=1.6.1",
+    "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
 ]
